--- a/Assets copy/css/style.css
+++ b/Assets copy/css/style.css
@@ -3,5 +3,15 @@
   padding: 0;
 }
 
-header {
+header h1 {
+  font-family: Arial, Helvetica, sans-serif;
+  color: aquamarine;
+  background-color: darkcyan;
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+}
+
+#search {
+  display: flex;
 }
