--- a/Assets copy/css/style.css
+++ b/Assets copy/css/style.css
@@ -14,6 +14,9 @@ header h1 {
 
 #search {
   display: flex;
+  justify-content: center;
+  align-items: left;
+  flex-direction: column;
 }
 
 #currentCity {
